--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,11 +1,15 @@
 header{
     background-color: beige;
+    text-align: center;
+    color: brown;
 }
 
 
 .info{
+    text-align: center;
     color: brown;
     background-color: lightgreen
+  
 }
 
 Img{
@@ -13,7 +17,14 @@ Img{
     border-bottom:5px solid black;
     border-right:5px solid black;
     border-left: 5px solid black;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+
 }
 h3{
     text-align: center;
+    background-color: lightgreen;
+    color: brown;
 }
